--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Vitality Sphere. All rights reserved.</p>
+        <p>&copy; 10 November 2024 Vitality Sphere. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript for logging page visits to API Gateway -->
